fix: NASA-132 fix quantity input styles and discount visibility

--- a/src/domain/cart/cartItemLine/_cartItemLine.module.scss
+++ b/src/domain/cart/cartItemLine/_cartItemLine.module.scss
@@ -56,6 +56,7 @@
   & .quantity-input {
     width: 40px;
     height: 24px;
+    padding: 0;
 
     text-align: center;
 
